<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/profile_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            android:scaleType="centerCrop"/>
    <ru.skillbranch.devintensive.ui.custom.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            android:src="@drawable/avatar_default"
            app:cv_borderColor="@color/color_accent"
            app:cv_borderWidth="2dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg"
            app:layout_constraintBottom_toTopOf="@+id/tv_nick_name"/>
    <ImageButton
            android:id="@+id/btn_switch_theme"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_switch_day_night"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            android:layout_marginEnd="32dp"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_edit_black_24dp"
            android:id="@+id/btn_edit"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            android:layout_marginStart="32dp"/>
    <TextView
            android:id="@+id/tv_nick_name"
            android:text="John Doe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Profile.Header.Nickname"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
            app:layout_constraintStart_toStartOf="@+id/iv_avatar"
            tools:text="John Doe"
            app:layout_constraintBottom_toTopOf="@+id/tv_rank"/>
    <TextView
            android:id="@+id/tv_rank"
            style="@style/Profile.Header.Rank"
            android:text="Junior Android Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
            tools:text="Junior Android Developer"
            app:layout_constraintBottom_toTopOf="@+id/iv_bg"
            android:layout_marginBottom="32dp"/>
    <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/colorAccentedSurface"/>
    <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/color_divider_light"/>
    <TextView
            android:id="@+id/tv_rating"
            style="@style/Profile.Metrics.Value"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg"
            app:layout_constraintBottom_toTopOf="@+id/tv_rating_label"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/view"
            android:drawableStart="@drawable/ic_sp_24"/>
    <TextView
            android:id="@+id/tv_rating_label"
            style="@style/Profile.Metrics.Label"
            android:text="@string/profile_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            app:layout_constraintEnd_toEndOf="@+id/tv_rating"
            app:layout_constraintStart_toStartOf="@+id/tv_rating"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            tools:text="@string/profile_label_rating"/>
    <TextView
            android:id="@+id/tv_respect"
            style="@style/Profile.Metrics.Value"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_bg"
            app:layout_constraintBottom_toTopOf="@+id/tv_respect_label"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/view2"
            android:drawableStart="@drawable/ic_respect_24"/>
    <TextView
            android:id="@+id/tv_respect_label"
            style="@style/Profile.Metrics.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_respect"
            app:layout_constraintEnd_toEndOf="@+id/tv_respect"
            app:layout_constraintStart_toStartOf="@+id/tv_respect"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            tools:text="@string/profile_label_respect"
            android:text="@string/profile_label_respect"/>
    <ImageView
            android:id="@+id/iv_avatar_icon"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_avatar"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/profile_hint_first_name"
                style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/til_first_name"
            app:layout_constraintTop_toBottomOf="@+id/til_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_last_name"
                style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/divider"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/til_last_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:background="?attr/colorDivider"/>

    <ImageView
            android:id="@+id/iv_about_icon"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/iv_about_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_about_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:counterMaxLength="128">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about"
                style="@style/Profile.EditText.MultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wr_about"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/colorDivider"
            android:layout_marginTop="5dp"/>

    <ImageView
            android:id="@+id/iv_repo_icon"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_repo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/iv_repo_icon"
            app:layout_constraintStart_toEndOf="@+id/iv_repo_icon"
            app:layout_constraintEnd_toStartOf="@+id/ic_eye"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository"
                style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
            android:id="@+id/ic_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_eye_24dp"
            app:layout_constraintTop_toTopOf="@+id/wr_repository"
            app:layout_constraintBottom_toBottomOf="@+id/wr_repository"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>